@startuml

title __PROJECT3's Class Diagram__\n

  namespace  {
    class AGenericADTSortedList {
    }
  }
  

  namespace  {
    class AddressBook {
    }
  }
  

  namespace  {
    class Contact {
    }
  }
  

  namespace  {
    class Driver {
    }
  }
  

  namespace  {
    class Helper {
    }
  }
  

  namespace  {
    class Node {
    }
  }
  

  AddressBook o-- Contact : contact
  Contact .up.|> java.lang.Comparable
  Node o-- E : member


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
